[master branch]
    - Added command line argument -d/-prdef for resetting all preferences to default values.
    - Added small popup menu at each tab
    - A PDF can also be dropped to the preview panel to trigger linking it
    - Braces around author names are now dropped internally. They remain in the .bib though
      Effects (incomplete list): Authors in the main window are shown without braces,
      autocompletion does not show these braces
    - Autocompletion: ";" is now also a delimiter allowing "keyword1; keyword2" in the keyword fields
    - Autocompletion: the amount of characters to trigger autocompletion may now be configured
      (default is 2)
    - Autocompletion: in case lower case letters are used, the search is case-insenstive,
      otherwise the search is case sensitive.
    - Autocompletion: new preference to choose how to deal with first names 
      (always full/always abbreviated/both full and abbreviated)
    - Added functionality "clean up entries" 
      - Includes clean up DOI functionality by Florian Straßer and Marius Kleiner
        (move of DOIs from ee, note, and url field is supported)
      - Option to ename PDF of entry according to configured PDF-naming-scheme
        (by Florian Straßer and Marius Kleiner)
      - clean up month (functionality based on patch 3470076 by Mathias Walter)
      - clean up pages
      - make file paths relative      
    - Added support for drag'n'drop of tabs by Florian Straßer and Marius Kleiner.
2.8
    - Applied Oscar Gustafsson's fix for IEEEXplore fetcher.
    - Added capability to remove databases from SQL database.
    - Fixed customization of entries in Biblatex mode.
2.8 beta 2
    - Improvements to SQL export and import. Fixed bug where subsequent exports to same
      database would fail. Can now save multiple bib bases to a single SQL database.
    - "abbr" modifier in BibTeX key generator now skips parentheses.