@@ -2296,3 +2296,7 @@ Please_select_which_JabRef_databases_do_you_want_to_import\:=Please_select_which
 
 Group_tree_could_not_be_parsed._If_you_save_the_BibTeX_database,_all_groups_will_be_lost.=Group_tree_could_not_be_parsed._If_you_save_the_BibTeX_database,_all_groups_will_be_lost.
 Attach_file=Attach_file
+Setting_all_preferences_to_default_values.=Setting_all_preferences_to_default_values.
+Resetting_preference_key_'%0'=Resetting_preference_key_'%0'
+Unknown_preference_key_'%0'=Unknown_preference_key_'%0'
+Unable_to_clear_preferences.=Unable_to_clear_preferences.
